--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,5 +21,21 @@ header {
 }
 
 /* MAIN */
+main {
+  padding-top: 20px;
+}
+
+.date {
+  color:#828282;
+  font-size: .8rem;
+}
+
+.author {
+  color: #23A9E5;
+}
+
+.highlight {
+  background-color: yellow;
+}
 
 /* FOOTER */
