--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
 }
 
 /* HEADER */
@@ -20,22 +20,61 @@ header {
   margin-left: 10px;
 }
 
-/* MAIN */
+/* MAIN */ 
 main {
   padding-top: 20px;
 }
 
-.date {
+main h1 {
+  font-weight: bolder;
+}
+
+.date, .author {
   color:#828282;
-  font-size: .8rem;
+  /* font-size: .8rem; */
 }
 
 .author {
+  font-size: medium;
+}
+
+.date {
+  font-size: small; 
+}
+
+.blue {
   color: #23A9E5;
+}
+
+.description {
+  font-size: small;
 }
 
 .highlight {
   background-color: yellow;
+}
+
+main ul {
+  padding-left: 20px;
+}
+
+main table thead {
+  color: white;
+  background-color: #23A9E5;
+  text-align: left;
+}
+
+.odd {
+  background-color: #B1E5F2;
+}
+
+main table {
+  border-spacing: 0;
+  margin-bottom: 20px;
+}
+
+main table .text {
+  width: 50%;
 }
 
 /* FOOTER */
